# vocal-range-analyzer

./: .gitignore  PLAN.md  README.md  analyze.py  pyproject.toml
docs/plans/: 2026-02-13-vocal-range-analyzer-design.md  2026-02-13-vocal-range-analyzer-implementation.md  2026-02-14-pitch-detector-shootout-design.md  2026-02-14-pitch-detector-shootout-plan.md
experiments/: .gitignore  common.py  compare.py  run_basicpitch.py  run_crepe.py  run_fcpe.py  run_penn.py  run_pesto.py  run_rmvpe.py  run_swiftf0.py  separate_vocals.py
src/: analysis.py  basic_pitch_detect.py  midi_export.py  pitch_detection.py  separation.py  visualization.py
tests/: conftest.py  test_analysis.py
